--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:image" content="https://sbox.bilw.in/images/sbox.png"/>
 	<meta property="og:url" content="https://sbox.bilw.in"/>
 	<meta property="og:site_name" content="s&box"/>
-	<meta property="og:description" content="Writed by Bilwin#7777"/>
+	<meta property="og:description" content="Written by Bilwin#7777"/>
 
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
