--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 							<p>
 								Hello! My name is Bilwin, also known as Maxim.
 								<br>
-								My first programming experience was exactly Lua (GLua) in Garry's Mod. Initially, I only did a little bit of UI editing from the workshop/scriptfodder, changing colors, textures, positions, it started in 2016.<br>
-								<br>Then developed plugins for frameworks such as Clockwork and NutScript, it wasn't until 2020 that I learned of a new <a href="https://github.com/Bilwin/helix-plugins">Helix framework on which I'm still developing plugins.</a><br>
-								I started mapping in 2018 and continue to develop this skill to this day. Then I learned the basics of Source Engine 2013, <a href="https://github.com/Bilwin/Runaway-17">texturing, modelling, animations, model bones, voice acting and sounds.</a> Also had experience with reverse-engineering any underwritten source code<br>
-								<br>I am an enthusiastic developer and want to continue my development at <b>S&Box</b>, while learning C# in depth.
+								My first experience in programming began with Garry's Mod. I first utilised Lua (GLua) around 2016. Initially, I only performed small amounts of UI editing from the workshop/scriptfodder, changing colors, textures and positions.<br>
+								<br>I then developed plugins for frameworks such as Clockwork and NutScript, however, it was not until 2020 that I learned of a new framework named Helix, in which I am developing <a href="https://github.com/Bilwin/helix-plugins">plugins</a> to this day for</a><br>
+								I also began mapping in 2018 and continue to develop this skill to this day Upon doing so, I learned the basics of Source Engine 2013, completing tasks such as texturing, modelling, animations, model bones, voice acting and sounds. My further experience in this comes with reverse-engineering any underwritten source code.<br>
+								<br>I am an enthusiastic developer and want to continue my development with <b>s&box</b>, while learning C# in depth.
 							</p>
 						</div>
 					</div>
